--- a/SmartEcoA/ClientApp/src/i18n/messages.ru.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.ru.xlf
@@ -11,19 +11,10 @@
         </context-group>
       </trans-unit><trans-unit id="Register" datatype="html">
         <source>Register</source><target state="final">Регистрация</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/nav-menu/nav-menu.component.html</context>
-          <context context-type="linenumber">30</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/users/register.component.html</context>
-          <context context-type="linenumber">1</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/users/register.component.html</context>
-          <context context-type="linenumber">36</context>
-        </context-group>
-      </trans-unit><trans-unit id="LogIn" datatype="html">
+        
+        
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/nav-menu/nav-menu.component.html</context><context context-type="linenumber">30</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/users/register.component.html</context><context context-type="linenumber">1</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/users/register.component.html</context><context context-type="linenumber">36</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/users/list.component.html</context><context context-type="linenumber">1</context></context-group></trans-unit><trans-unit id="LogIn" datatype="html">
         <source>Log in</source><target state="final">Войти</target>
         <context-group purpose="location">
           <context context-type="sourcefile">app/nav-menu/nav-menu.component.html</context>
@@ -57,15 +48,9 @@
         </context-group>
       </trans-unit><trans-unit id="Email" datatype="html">
         <source>Email</source><target state="final">Эл. почта</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/users/register.component.html</context>
-          <context context-type="linenumber">8</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/users/login.component.html</context>
-          <context context-type="linenumber">8</context>
-        </context-group>
-      </trans-unit><trans-unit id="InvalidEmailAddress" datatype="html">
+        
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/users/register.component.html</context><context context-type="linenumber">8</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/users/login.component.html</context><context context-type="linenumber">8</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/users/list.component.html</context><context context-type="linenumber">10</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/users/edit.component.html</context><context context-type="linenumber">6</context></context-group></trans-unit><trans-unit id="InvalidEmailAddress" datatype="html">
         <source>
           Invalid email address.
         </source><target state="final">
@@ -137,22 +122,17 @@
           <context context-type="sourcefile">app/users/login.component.html</context>
           <context context-type="linenumber">20</context>
         </context-group>
-      </trans-unit>
+      </trans-unit><trans-unit id="Users" datatype="html">
+        <source>Users</source><target state="final">Пользователи</target>
+        
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/users/index.component.html</context><context context-type="linenumber">2</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">4</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">2</context></context-group></trans-unit>
       <trans-unit id="PollutionEnvironments" datatype="html">
         <source>Pollution Environments</source><target state="final">Среды загязнения</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/administration/administration.component.html</context>
-          <context context-type="linenumber">7</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/administration/administration.component.html</context>
-          <context context-type="linenumber">5</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/pollutionenvironments/index.component.html</context>
-          <context context-type="linenumber">2</context>
-        </context-group>
-      </trans-unit>
+        
+        
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">7</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/administration/administration.component.html</context><context context-type="linenumber">6</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/pollutionenvironments/index.component.html</context><context context-type="linenumber">2</context></context-group></trans-unit>
       <trans-unit id="Create" datatype="html">
         <source>Create</source><target state="final">Создать</target>
         <context-group purpose="location">
@@ -166,9 +146,16 @@
       </trans-unit>
       <trans-unit id="Filter" datatype="html">
         <source>Filter</source><target state="final">Фильтр</target>
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/users/list.component.html</context><context context-type="linenumber">4</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/pollutionenvironments/list.component.html</context><context context-type="linenumber">4</context></context-group></trans-unit><trans-unit id="Roles" datatype="html">
+        <source>Roles</source><target state="final">Роли</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
-          <context context-type="linenumber">4</context>
+          <context context-type="sourcefile">app/users/list.component.html</context>
+          <context context-type="linenumber">14</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/edit.component.html</context>
+          <context context-type="linenumber">10</context>
         </context-group>
       </trans-unit>
       <trans-unit id="Name" datatype="html">
@@ -180,23 +167,32 @@
       </trans-unit>
       <trans-unit id="Details" datatype="html">
         <source>Details</source><target state="final">Детали</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
-          <context context-type="linenumber">17</context>
-        </context-group>
-      </trans-unit>
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/users/list.component.html</context><context context-type="linenumber">20</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/pollutionenvironments/list.component.html</context><context context-type="linenumber">17</context></context-group></trans-unit>
       <trans-unit id="Edit" datatype="html">
         <source>Edit</source><target state="final">Редактировать</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
-          <context context-type="linenumber">18</context>
-        </context-group>
-      </trans-unit>
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/users/list.component.html</context><context context-type="linenumber">21</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/pollutionenvironments/list.component.html</context><context context-type="linenumber">18</context></context-group></trans-unit>
       <trans-unit id="Delete" datatype="html">
         <source>Delete</source><target state="final">Удалить</target>
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/users/list.component.html</context><context context-type="linenumber">22</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/pollutionenvironments/list.component.html</context><context context-type="linenumber">19</context></context-group></trans-unit><trans-unit id="UserDetails" datatype="html">
+        <source>User details</source><target state="final">Детали пользователя</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/pollutionenvironments/list.component.html</context>
-          <context context-type="linenumber">19</context>
+          <context context-type="sourcefile">app/users/details.component.html</context>
+          <context context-type="linenumber">2</context>
+        </context-group>
+      </trans-unit><trans-unit id="UserEmail" datatype="html">
+        <source>User email</source><target state="final">Эл. почта пользователя</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/details.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+      </trans-unit><trans-unit id="UserRoles" datatype="html">
+        <source>User roles</source><target state="final">Роли пользователя</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/details.component.html</context>
+          <context context-type="linenumber">9</context>
         </context-group>
       </trans-unit>
       <trans-unit id="CreateNewPollutionEnvironment" datatype="html">
@@ -328,15 +324,9 @@
       </trans-unit>
       <trans-unit id="Cancel" datatype="html">
         <source>Cancel</source><target state="final">Отмена</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/pollutionenvironments/create.component.html</context>
-          <context context-type="linenumber">29</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/pollutionenvironments/edit.component.html</context>
-          <context context-type="linenumber">29</context>
-        </context-group>
-      </trans-unit>
+        
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/users/edit.component.html</context><context context-type="linenumber">20</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/pollutionenvironments/create.component.html</context><context context-type="linenumber">29</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/pollutionenvironments/edit.component.html</context><context context-type="linenumber">29</context></context-group></trans-unit>
       <trans-unit id="EditPollutionEnvironment" datatype="html">
         <source>Edit Pollution Environment</source><target state="final">Редактировать среду загрязнения</target>
         <context-group purpose="location">
@@ -346,11 +336,8 @@
       </trans-unit>
       <trans-unit id="Save" datatype="html">
         <source>Save</source><target state="final">Сохранить</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/pollutionenvironments/edit.component.html</context>
-          <context context-type="linenumber">28</context>
-        </context-group>
-      </trans-unit>
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/users/edit.component.html</context><context context-type="linenumber">19</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/pollutionenvironments/edit.component.html</context><context context-type="linenumber">28</context></context-group></trans-unit>
       <trans-unit id="PollutionEnvironmentDetails" datatype="html">
         <source>Pollution Environment details</source><target state="final">Детали среды загрязнения</target>
         <context-group purpose="location">
@@ -367,9 +354,12 @@
       </trans-unit>
       <trans-unit id="Back" datatype="html">
         <source>Back</source><target state="final">Обратно</target>
+        
+      <context-group purpose="location"><context context-type="sourcefile">app/users/details.component.html</context><context context-type="linenumber">14</context></context-group><context-group purpose="location"><context context-type="sourcefile">app/pollutionenvironments/details.component.html</context><context context-type="linenumber">10</context></context-group></trans-unit><trans-unit id="EditUser" datatype="html">
+        <source>Edit user</source><target state="final">Редактировать пользователя</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/pollutionenvironments/details.component.html</context>
-          <context context-type="linenumber">10</context>
+          <context context-type="sourcefile">app/users/edit.component.html</context>
+          <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
     </body>
